metadata/objects/GRAXQuery__c.object
<CustomObject>
    <description>This object is used to store the custom fields and filters used by GRAX Connect</description>
    <fields>
        <fullName>Do_Not_Store_Data__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Only check this if you do NOT want to store data. If you have compliant data you want relationships but not data stored.</description>
        <inlineHelpText>Only check this if you do NOT want to store data. If you have compliant data you want relationships but not data stored.</inlineHelpText>
        <label>Do Not Store Data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enable_Audit_Log__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Audit Log</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Filter__c</fullName>
        <label>Filter</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GRAX_Configured__c</fullName>
        <label>GRAX Configured</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Hourly_Synch_Period__c</fullName>
        <label>Hourly Synch Period</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_Synch__c</fullName>
        <label>Last Synch</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ObjectName__c</fullName>
        <externalId>true</externalId>
        <label>ObjectName</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Order_By__c</fullName>
        <label>Order By</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Selected_Fields__c</fullName>
        <label>Selected Fields</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Total_Records_Processed__c</fullName>
        <label>Total Records Processed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>graxconfig__c</fullName>
        <label>graxconfig</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>GRAX : Object Configuration</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ObjectName__c</columns>
        <columns>Total_Records_Processed__c</columns>
        <columns>GRAX_Configured__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_GRAX_Queries</fullName>
        <columns>NAME</columns>
        <columns>ObjectName__c</columns>
        <columns>Total_Records_Processed__c</columns>
        <columns>Selected_Fields__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All GRAX Queries</label>
    </listViews>
    <nameField>
        <displayFormat>GRAX-{000000}</displayFormat>
        <label>GRAXQueries Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>GRAX : Object Configuration</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>